# ask-lab-wsl

./: CMakeLists.txt  Makefile  README.md
.devcontainer/: devcontainer.json
doc/: JUST-DO-IT.md  JustDoIt.md
src/: CMakeLists.txt  whale.cpp
